welcome.lessons.welcome.array.island.Island.scala.error
island:-6: error: Missing closing brace `}' assumed here
try {
^island:1: error: expected class or object definition
def island(num:Array[Int]): Int = {
^island:7: error: expected class or object definition
def level(num:Array[Int],niveau:Int,x:Int):Int ={
^